# waits-predictor

./: CMakeLists.txt  README.md
example/: example.cpp
include/mahjong/: waits_predictor.hpp
include/mahjong/waits_predictor/: states.hpp  value.hpp
src/: counter.cpp  counter.hpp  main.cpp  mkind.cpp  states.cpp  states.hpp  utils.cpp  utils.hpp  value.cpp  value.hpp  waits_predictor.cpp  waits_predictor.hpp
